content/boundary/v0.13.x/content/docs/commands/users/list.mdx
---
layout: docs
page_title: users list - Command
description: |-
  The "users list" command lists users from the specified scope or resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2023-01-01T00:00:00.000Z
last_modified: 2023-01-01T00:00:00.000Z
# END AUTO GENERATED METADATA
---

# users list

Command: `users list`

The `users list` command lets you list the users who belong to a given scope or resource.

## Example

This example lists all users in the scope `s_1234567890`:

```shell-session
$ boundary users list -scope-id s_1234567890
```

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary users list [options] [args]
```

</CodeBlockConfig>

### Command options

- `-filter=<string>` - If set, Boundary filters the list operation before it is returned.
The filter operates against each item in the list.
We recommend that you use single quotes, as filters contain double quotes.
Refer to the [Filter resource listings documentation](/boundary/docs/concepts/filtering/resource-listing) for more details.
- `-recursive` - If set, runs the list operation recursively into child scopes, if the type supports it.
The default value is `false`.
- `-scope-id=<string>` - The scope that contains the users you want to list.
The default value is `global`.
You can also specify this value using the **BOUNDARY_SCOPE_ID** environment variable.

@include 'cmd-option-note.mdx'